--- a/index.html
+++ b/index.html
@@ -10,34 +10,37 @@
 </head>
 
 <body>
+    <div class="wrapper">
+
+        <h1>DIVs and SPANs!</h1>
+
+        <div class="similarities">
+            <h2>Similarities</h2>
+            <ul>
+                <li>they are both
+                    <span style="color:Blue"> containers </span> that hold content</li>
+                <li>they are invisible by default</li>
+                <li>they are styled with <code>&lt;style&gt;</code> and <code>&lt;class&gt;</code></li>
+            </ul>
 
 
-    <h1>DIVs and SPANs!</h1>
+        </div>
 
+        <div class="differences">
+            <h2>Differences</h2>
+            <ul>
+                <li><code>&lt;div&gt;</code>: <span style="color:blue"> block </span></li>
+                <ul>
+                    <li>used for grouping elements</li>
+                </ul>
+                <li><code>&lt;span&gt;</code>: <span style="color:blue">inline</span></li>
+                <ul>
+                    <li>used to change the style of something on a webpage without affecting the context it is within</li>
+                </ul>
+            </ul>
 
-    <h2>Similarities</h2>
-    <ul>
-        <li>they are both containers that hold content</li>
-        <li>they are invisible by default</li>
-        <li>they are styled with <code>&lt;style&gt;</code> and <code>&lt;class&gt;</code></li>
-    </ul>
-
-
-
-    <h2>Differences</h2>
-    <ul>
-        <li><code>&lt;div&gt;</code>: block</li>
-        <ul>
-            <li>used for grouping elements</li>
-        </ul>
-        <li><code>&lt;span&gt;</code>: inline</li>
-        <ul>
-            <li>used to change the style of something on a webpage without affecting the context it is within</li>
-        </ul>
-    </ul>
-
-
-
+        </div>
+    </div>
 </body>
 
 </html>
